# ChangeLog for net-www/mozilla-firebird
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-firebird/Attic/ChangeLog,v 1.4 2003/06/04 18:55:16 brad Exp $

*mozilla-firebird 0.6-r3 (04 June 2003)

  04 June 2003; Brad Laue <brad@gentoo.org> mozilla-firebird-0.6-r3.ebuild :
  Correctly symlink PLUGINS_DIR to /usr/lib/nsbrowser/plugins

*mozilla-firebird 0.6-r2 (03 June 2003)

  03 June 2003; Brad Laue <brad@gentoo.org> mozilla-firebird-0.6-r2.ebuild :
  - Remove bad dependency on dev-util/cvs

*mozilla-firebird 0.6-r1 (03 June 2003)

  03 June 2003; Brad Laue <brad@gentoo.org> mozilla-firebird-0.6-r1.ebuild :
  - Change not depends from !net-www/MozillaFirebird-bin to !net-www/mozilla-firebird-bin
  - Add headers to the ebuilds, ChangeLog file

*mozilla-firebird 0.6 (02 June 2003)

  02 June 2003; Brad Laue <brad@gentoo.org> mozilla-firebird-0.6.ebuild :
  Initial import, based on ideas taken from phoenix-cvs, bug 21216 and others.