@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mozilla-firebird
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-firebird/Attic/ChangeLog,v 1.4 2003/06/04 18:55:16 brad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla-firebird/Attic/ChangeLog,v 1.5 2003/06/08 06:25:40 brad Exp $
+
+*mozilla-firebird-0.6-r4 (08 Jun 2003)
+
+  08 Jun 2003; Brad Laue <brad@gentoo.org> mozilla-firebird-0.6-r4.ebuild:
+  This revision adds an item to the GNOME applications menu, per bug 22388.
+  Thanks to Don Goss for testing.
 
 *mozilla-firebird 0.6-r3 (04 June 2003)
 
